Adding install prompt

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -13,5 +13,6 @@
     "today": "Heute",
     "yesterday": "Gestern",
     "plant": "Pflanze",
-    "count": "Anzahl"
+    "count": "Anzahl",
+    "install": "App installieren"
 }
