--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,5 +13,6 @@
     "today": "Today",
     "yesterday": "Yesterday",
     "plant": "Plant",
-    "count": "Count"
+    "count": "Count",
+    "install": "Install app"
 }
