Change collard greens German Translation

--- a/public/locales/de/plants.json
+++ b/public/locales/de/plants.json
@@ -10,7 +10,7 @@
     "carrot": "Karotte",
     "cauliflower": "Blumenkohl",
     "celery": "Sellerie",
-    "collardgreens": "Grünkohl",
+    "collardgreens": "Grüner Blattkohl",
     "cucumber": "Gurke",
     "eggplant": "Aubergine",
     "fennel": "Fenchel",
